package entity.item;

import entity.role.Combatant;

public class Potion extends Item {

   
}
